# aws-log-sentinel

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
redaction/: __init__.py  base_profile.py  engine.py
redaction/profiles/: __init__.py  us_global.py
tests/: __init__.py  conftest.py  test_check_deployment_status.py  test_check_recent_errors.py  test_list_log_groups.py  test_redaction.py
