[project]
name = "aws-log-sentinel"
version = "0.1.0"
description = "MCP Server for safely debugging AWS CloudWatch Logs and CodeDeploy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Adam Parker" }
]
keywords = ["mcp", "aws", "cloudwatch", "codedeploy", "debugging"]

dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "scrubadub>=2.0.0",  # PII detection and redaction
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "moto>=4.2.0",  # AWS mocking for tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
aws-log-sentinel = "server:mcp.run"
